Bug 246168 - Amarok crashes on saving playlist [@Playlists::exportPlaylistFile]
Summary: Amarok crashes on saving playlist [@Playlists::exportPlaylistFile]
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (other bugs)
Version First Reported In: 2.3.1
Platform: openSUSE Linux
: NOR crash
Target Milestone: 2.3.2
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 16:37 UTC by Peter Terpstra
Modified: 2010-08-30 22:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Terpstra 2010-07-29 16:37:34 UTC
Application: amarok (2.3.1)
KDE Platform Version: 4.4.4 (KDE 4.4.4) "release 5"
Qt Version: 4.6.3
Operating System: Linux 2.6.34-12-desktop x86_64
Distribution: "openSUSE 11.3 (x86_64)"

-- Information about the crash:
Amarok was playing music and I wanted to save the playlist.

 -- Backtrace:
Application: Amarok (amarok), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fea3cdf1760 (LWP 22726))]

Thread 14 (Thread 0x7fea207e2710 (LWP 22729)):
#0  0x00007fea38170709 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea2642b951 in metronom_sync_loop () from /usr/lib64/libxine.so.1
#2  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#3  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 13 (Thread 0x7fea1ffe1710 (LWP 22730)):
#0  0x00007fea3816f68e in __pthread_mutex_unlock_usercnt () from /lib64/libpthread.so.0
#1  0x00007fea324fceca in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fea324fde69 in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fea324fe510 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fea3b0956d6 in QEventDispatcherGlib::processEvents (this=0x8e5c30, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#5  0x00007fea3b06c292 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fea3b06c495 in QEventLoop::exec (this=0x7fea1ffe0dd0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007fea3af832cf in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#8  0x00007fea266893b4 in ?? () from /usr/lib64/kde4/plugins/phonon_backend/phonon_xine.so
#9  0x00007fea3af85bf5 in QThreadPrivate::start (arg=0x9b98a0) at thread/qthread_unix.cpp:248
#10 0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#11 0x00007fea39aee82d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7fea1f5d6710 (LWP 22734)):
#0  0x00007fea39ae56b3 in poll () from /lib64/libc.so.6
#1  0x00007fea1f5db9d7 in ao_alsa_handle_event_thread () from /usr/lib64/xine/plugins/1.29/xineplug_ao_out_alsa.so
#2  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#3  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7fea1edd5710 (LWP 22735)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea2643d96b in ao_loop () from /usr/lib64/libxine.so.1
#2  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#3  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7fea1d7bb710 (LWP 22737)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea2643d96b in ao_loop () from /usr/lib64/libxine.so.1
#2  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#3  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7fea1cfba710 (LWP 22738)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea2643d96b in ao_loop () from /usr/lib64/libxine.so.1
#2  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#3  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7fea14948710 (LWP 22741)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea350af2a0 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib64/libQtWebKit.so.4
#2  0x00007fea350af2d9 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib64/libQtWebKit.so.4
#3  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#4  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7fea122e5710 (LWP 22742)):
#0  0x00007fea38170709 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea2643998f in video_out_loop () from /usr/lib64/libxine.so.1
#2  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#3  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7fea118cb710 (LWP 22743)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea3af862bb in wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fea36bfb3f6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1e98690, th=0x1e98e40) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fea36bfde35 in waitForAvailableJob (this=0x1e97660, th=0x1e98e40) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x1e97660, th=0x1e98e40) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0x00007fea36bfb7ef in ThreadWeaver::ThreadRunHelper::run (this=0x7fea118cae30, parent=0x1e98690, th=0x1e98e40) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:87
#7  0x00007fea36bfb878 in ThreadWeaver::Thread::run (this=0x1e98e40) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:142
#8  0x00007fea3af85bf5 in QThreadPrivate::start (arg=0x1e98e40) at thread/qthread_unix.cpp:248
#9  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#10 0x00007fea39aee82d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fea0d70d710 (LWP 22744)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea3af862bb in wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fea36bfb3f6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1e98690, th=0x1428dc0) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fea36bfde35 in waitForAvailableJob (this=0x1e97660, th=0x1428dc0) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x1e97660, th=0x1428dc0) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0x00007fea36bfb7ef in ThreadWeaver::ThreadRunHelper::run (this=0x7fea0d70ce30, parent=0x1e98690, th=0x1428dc0) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:87
#7  0x00007fea36bfb878 in ThreadWeaver::Thread::run (this=0x1428dc0) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:142
#8  0x00007fea3af85bf5 in QThreadPrivate::start (arg=0x1428dc0) at thread/qthread_unix.cpp:248
#9  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#10 0x00007fea39aee82d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fea0cf0c710 (LWP 22745)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea3af862bb in wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fea36bfb3f6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1e98690, th=0x115d730) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fea36bfde35 in waitForAvailableJob (this=0x1e97660, th=0x115d730) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x1e97660, th=0x115d730) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0x00007fea36bfde4e in ThreadWeaver::WorkingHardState::applyForWork (this=0x1e97660, th=0x115d730) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007fea36bfb7ef in ThreadWeaver::ThreadRunHelper::run (this=0x7fea0cf0be30, parent=0x1e98690, th=0x115d730) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:87
#8  0x00007fea36bfb878 in ThreadWeaver::Thread::run (this=0x115d730) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:142
#9  0x00007fea3af85bf5 in QThreadPrivate::start (arg=0x115d730) at thread/qthread_unix.cpp:248
#10 0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#11 0x00007fea39aee82d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fea0bd0d710 (LWP 22746)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea3af862bb in wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x1e98a10, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007fea36bfb3f6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x1e98690, th=0x1157280) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fea36bfde35 in waitForAvailableJob (this=0x1e97660, th=0x1157280) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WeaverImpl.cpp:356
#5  ThreadWeaver::WorkingHardState::applyForWork (this=0x1e97660, th=0x1157280) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WorkingHardState.cpp:71
#6  0x00007fea36bfde4e in ThreadWeaver::WorkingHardState::applyForWork (this=0x1e97660, th=0x1157280) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007fea36bfb7ef in ThreadWeaver::ThreadRunHelper::run (this=0x7fea0bd0ce30, parent=0x1e98690, th=0x1157280) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:87
#8  0x00007fea36bfb878 in ThreadWeaver::Thread::run (this=0x1157280) at /usr/src/debug/kdelibs-4.4.4/threadweaver/Weaver/Thread.cpp:142
#9  0x00007fea3af85bf5 in QThreadPrivate::start (arg=0x1157280) at thread/qthread_unix.cpp:248
#10 0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#11 0x00007fea39aee82d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fea0b50c710 (LWP 22748)):
#0  0x00007fea3817039c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fea36455e30 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7fea3673b220) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2304
#2  0x00007fea36455e69 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7fea367492ec) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1438
#3  0x00007fea3816ba4f in start_thread () from /lib64/libpthread.so.0
#4  0x00007fea39aee82d in clone () from /lib64/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fea3cdf1760 (LWP 22726)):
[KCrash Handler]
#5  0x00007fea3bd418fb in Playlists::exportPlaylistFile (list=<value optimized out>, path=..., queued=...)
    at /usr/src/debug/amarok-2.3.1/src/core-impl/playlists/types/file/PlaylistFileSupport.cpp:176
#6  0x00007fea3bd41fe7 in Playlists::exportPlaylistFile (list=<value optimized out>, path=<value optimized out>)
    at /usr/src/debug/amarok-2.3.1/src/core-impl/playlists/types/file/PlaylistFileSupport.cpp:150
#7  0x00007fea3bbe5a2e in Playlist::ProxyBase::exportPlaylist (this=0x11e63c0, path=<value optimized out>) at /usr/src/debug/amarok-2.3.1/src/playlist/proxymodels/ProxyBase.cpp:107
#8  0x00007fea3c04d113 in MainWindow::exportPlaylist (this=<value optimized out>) at /usr/src/debug/amarok-2.3.1/src/MainWindow.cpp:585
#9  0x00007fea3c061bc3 in MainWindow::qt_metacall (this=0xf9b440, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0x7fff0ac3aef0) at /usr/src/debug/amarok-2.3.1/build/src/MainWindow.moc:141
#10 0x00007fea3b080a1f in QMetaObject::activate (sender=0x1224b90, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff0ac3aef0) at kernel/qobject.cpp:3295
#11 0x00007fea3a458d12 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#12 0x00007fea3a458f0a in QAction::activate (this=0x1224b90, event=<value optimized out>) at kernel/qaction.cpp:1255
#13 0x00007fea3a87a8b3 in QMenuPrivate::activateCausedStack (this=0x18e6f20, causedStack=..., action=0x1224b90, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1002
#14 0x00007fea3a88097a in QMenuPrivate::activateAction (this=0x18e6f20, action=0x1224b90, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1094
#15 0x00007fea3c77027d in KMenu::mouseReleaseEvent (this=0x18e6e60, e=<value optimized out>) at /usr/src/debug/kdelibs-4.4.4/kdeui/widgets/kmenu.cpp:471
#16 0x00007fea3a4aedbc in QWidget::event (this=0x18e6e60, event=0x7fff0ac3bb70) at kernel/qwidget.cpp:8044
#17 0x00007fea3a881bcb in QMenu::event (this=0x18e6e60, e=0x7fff0ac3bb70) at widgets/qmenu.cpp:2421
#18 0x00007fea3a45e4d4 in QApplicationPrivate::notify_helper (this=0x785d30, receiver=0x18e6e60, e=0x7fff0ac3bb70) at kernel/qapplication.cpp:4302
#19 0x00007fea3a46734a in QApplication::notify (this=<value optimized out>, receiver=0x18e6e60, e=0x7fff0ac3bb70) at kernel/qapplication.cpp:3867
#20 0x00007fea3c79cc06 in KApplication::notify (this=0x7fff0ac3c850, receiver=0x18e6e60, event=0x7fff0ac3bb70) at /usr/src/debug/kdelibs-4.4.4/kdeui/kernel/kapplication.cpp:302
#21 0x00007fea3b06ce4c in QCoreApplication::notifyInternal (this=0x7fff0ac3c850, receiver=0x18e6e60, event=0x7fff0ac3bb70) at kernel/qcoreapplication.cpp:726
#22 0x00007fea3a4601e5 in sendEvent (receiver=0x18e6e60, event=0x7fff0ac3bb70, alienWidget=0x0, nativeWidget=0x18e6e60, buttonDown=0x7fea3af0ab28, lastMouseReceiver=..., spontaneous=true)
    at ../../src/corelib/kernel/qcoreapplication.h:215
#23 QApplicationPrivate::sendMouseEvent (receiver=0x18e6e60, event=0x7fff0ac3bb70, alienWidget=0x0, nativeWidget=0x18e6e60, buttonDown=0x7fea3af0ab28, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2967
#24 0x00007fea3a4da914 in QETWidget::translateMouseEvent (this=0x18e6e60, event=<value optimized out>) at kernel/qapplication_x11.cpp:4314
#25 0x00007fea3a4d8e19 in QApplication::x11ProcessEvent (this=0x7fff0ac3c850, event=0x7fff0ac3c4d0) at kernel/qapplication_x11.cpp:3513
#26 0x00007fea3a4ff492 in x11EventSourceDispatch (s=0x794130, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#27 0x00007fea324fda93 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#28 0x00007fea324fe270 in ?? () from /usr/lib64/libglib-2.0.so.0
#29 0x00007fea324fe510 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#30 0x00007fea3b09567f in QEventDispatcherGlib::processEvents (this=0x624d50, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#31 0x00007fea3a4ff14e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007fea3b06c292 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007fea3b06c495 in QEventLoop::exec (this=0x7fff0ac3c7f0, flags=...) at kernel/qeventloop.cpp:201
#34 0x00007fea3b07088b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#35 0x00000000004081df in main (argc=1, argv=0x7fff0ac3e7b8) at /usr/src/debug/amarok-2.3.1/src/main.cpp:237

Reported using DrKonqi