Fixed a crash when trying to save a playlist to a file where the format of the playlist was unknown.

BUG: 246168